crates/deadline-cli/tests/cli/snapshots/cli__trace_schedule__trace_schedule_trace_file_without_format_errors.snap
---
source: crates/deadline-cli/tests/cli/trace_schedule.rs
info:
  program: deadline
  args:
    - job
    - trace-schedule
    - "--job-id"
    - job-aaf4cdf8aae242f58fb84c5bb19f199b
    - "--trace-file"
    - /tmp/trace.json
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:49850"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:49850"
    AWS_ENDPOINT_URL_S3: "http://localhost:49850"
    AWS_ENDPOINT_URL_STS: "http://localhost:49850"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpH0Rpev/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpH0Rpev
---
success: false
exit_code: 1
----- stdout -----
Error: Must provide --trace-format with --trace-file.

----- stderr -----
