crates/deadline-cli/tests/cli/snapshots/cli__trace_schedule__trace_schedule_verbose_prints_trace_data.snap
---
source: crates/deadline-cli/tests/cli/trace_schedule.rs
info:
  program: deadline
  args:
    - job
    - trace-schedule
    - "--job-id"
    - job-aaf4cdf8aae242f58fb84c5bb19f199b
    - "-v"
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:64475"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:64475"
    AWS_ENDPOINT_URL_S3: "http://localhost:64475"
    AWS_ENDPOINT_URL_STS: "http://localhost:64475"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpkGqrip/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpkGqrip
---
success: true
exit_code: 0
----- stdout -----
Getting the job...
Getting all the session actions for the job...
Getting 1 step(s) via BatchGetStep...
Getting 1 task(s) via BatchGetTask...
Processing the trace data...
 ==== TRACE DATA ====
jobId: job-aaf4cdf8aae242f58fb84c5bb19f199b
name: Render Job
lifecycleStatus: no value was set
lifecycleStatusMessage: ''
priority: 0
createdAt: 2025-01-27 07:34:41+00:00
createdBy: ''
startedAt: 2025-01-27 07:37:53+00:00
endedAt: 2025-01-27 07:38:53+00:00

- sessionId: session-001
  workerId: worker-0000000000000000000000000001
  fleetId: fleet-00000000000000000000000000000001
  lifecycleStatus: ENDED
  startedAt: 2025-01-27 07:37:53+00:00
  endedAt: 2025-01-27 07:38:53+00:00
  actions:
  - sessionActionId: sessionaction-001
    status: SUCCEEDED
    startedAt: 2025-01-27 07:37:53+00:00
    endedAt: 2025-01-27 07:38:53+00:00
    definition:
      taskRun:
        stepId: step-00000000000000000000000000000001
        taskId: task-001
    task:
      farmId: farm-abc
      queueId: queue-abc
      jobId: job-aaf4cdf8aae242f58fb84c5bb19f199b
      stepId: step-00000000000000000000000000000001
      taskId: task-001
      parameters:
        Frame:
          int: '42'
        Camera:
          string: main
      createdAt: 2025-01-27 07:34:41+00:00
      runStatus: SUCCEEDED
  index: 0
  step:
    farmId: farm-abc
    queueId: queue-abc
    jobId: job-aaf4cdf8aae242f58fb84c5bb19f199b
    stepId: step-00000000000000000000000000000001
    name: Render
    lifecycleStatus: SUCCEEDED
    createdAt: 2025-01-27 07:34:41+00:00
    startedAt: 2025-01-27 07:37:53+00:00
    endedAt: 2025-01-27 07:39:17+00:00


 ==== SUMMARY ====

Session Count: 1
Session Total Duration: 0:01:00
Session Action Count: 1
Session Action Total Duration: 0:01:00
Task Run Count: 1
Task Run Total Duration: 0:01:00 (100.0%)
Non-Task Run Count: 0
Non-Task Run Total Duration: 0:00:00 (0.0%)
Sync Job Attachments Count: 0
Sync Job Attachments Total Duration: 0:00:00 (0.0%)
Env Action Count: 0
Env Action Total Duration: 0:00:00 (0.0%)

Within-session Overhead Duration: 0:00:00 (0.0%)
Within-session Overhead Duration Per Action: 0:00:00

----- stderr -----
